feat: jdk25 based tuning